Createda new html file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div id="container" >
         <!-- # 1-->
         <div class="photo" id="item1">
-            <img src="./foto_perfil.jpg" alt="person">
+            <div >
+                <img src="./2foto_perfil.jpg" alt="person">
+            </div>
         </div>
 
         <!-- # 2-->
