--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 
         <!---------- Centro -------------->
-        <div class="row">
+        <div class="row" id="cuatro_cinco">
 
-          <div class="col-4">
+          <div class="col-4" id="centro_c_c">
               <!-- # 3 -->
               <div class="row">
                   <h3>Contactos</h3>
@@ -97,7 +97,7 @@
               </div>
 
               <!-- # 6.3 -->
-              <div class="row">
+              <div class="row" id="seis_tres">
                   <h4>Educacion</h4>
                   <ul>
                     <li>Educaion media: Lice Guatemalteco en computacion</li>
